<resources>
    <string name="app_name">FarmApp</string>
    <string name="chkRemember">Remember</string>
    <string name="txvUser" translatable="false">Username</string>
    <string name="txvPassword" translatable="false">Password</string>
    <string name="password_length" translatable="false">Password length must be 8 caracters</string>
    <string name="data_empty">You must enter value in the field</string>
    <string name="edtPassword">Enter password</string>
    <string name="edtUser">Enter username</string>
    <string name="btnLogin">Login</string>
    <string name="password_digit">Must contain at least one digit</string>
    <string name="password_case">It must contain al least one character in upper/lower case</string>
    <string name="tilName">Name</string>
    <string name="tilDescription">Description</string>
    <string name="tilBrand">Brand</string>
    <string name="tilPrice">Price</string>
    <string name="tilConcentration">Strength</string>
    <string name="btnAddProduct">Add Product</string>
    <string name="bien">Bien!</string>
    <string name="message_province_city">Ha seleccionado %1$s (%2$s)</string>
    <string name="action_sort_alphabetically">Add product</string>
    <string name="action_settings_account">Configuración de cuenta</string>
    <string name="action_settings_general">Configuración general</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="add_product">Añadir producto</string>
    <string name="items_deleted">Ha borrado productos de la lista</string>
</resources>
