<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relativeLayout"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvUser"
        android:id="@+id/txvUser"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:textSize="22sp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:id="@+id/edtUser"
        android:layout_toRightOf="@+id/txvUser"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvPassword"
        android:id="@+id/txvPassword"
        android:layout_below="@id/txvUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="22sp"
        android:layout_marginTop="@dimen/margin_top"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edt_margin_left"
        android:inputType="textPassword"
        android:id="@+id/edtPassword"
        android:layout_below="@+id/edtUser"
        android:layout_toRightOf="@id/txvPassword"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkRemember"
        android:id="@+id/chkRemember"
        android:layout_below="@id/edtPassword"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/margin_top"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chkRemember"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"/>

</RelativeLayout>